2005-04-13  Marc Singer  <elf@buici.com>

	* src/drivers/drv-ext2.c: Added configuration option to set the
	block device for both (fat & ext2) filesystem drivers.

	* src/apex/env.c: Fixed errors in the autoboot macros left over
	from the transition to Kconfig.

2005-04-08  Marc Singer  <elf@buici.com>

	* src/mach-lh7952x/drv-emac.c (emac_init): Fixed detection of the
	PHY.  Needed to setup MUX to get the PHY to enable.
	
	* src/mach-ixp42x/coprocessor.h (COPROCESSOR_WAIT\): New headers
	to define an instruction sequence to let the MMU/coprocessor catch
	up when there are changes to the setup.

	* src/arch-arm/entry/entry.c (__section): New options for
	disabling MMU at startup.

	* Makefile (every): Fixed every target for the sake of adding new
	configuration options.

2005-04-07  Marc Singer  <elf@buici.com>

	* src/mach-lh7952x/Makefile (obj-$(CONFIG_DRIVER_EMAC_LH79524)):
	Same as below.

	* src/mach-lh7952x/drv-emac.c: Corrected configuration references
	for the new configurator.  Macros were wrong for EMAC.

2005-03-22  Marc Singer  <elf@buici.com>

	* src/apex/env.c (_s): Fixed references to CONFIG_ macros that may
	already be quoted.

2005-03-20  Marc Singer  <elf@buici.com>

	* src/mach-lh7a40x/initialize.c (__section): initializing the SMC
	control so that flash works correctly. 

	* Makefile (SUBLEVEL): Fixed the reset of the config hooks so that
	the build is now optimal with respect to the configuration.

	* Fixed menuconfig.  Still, I've never been able to edit strings,
	hex's, or int's in menuconfig. It's there for the folks who want it.

	* Makefile (SUBLEVEL): Rolling revision for integration of new
	configuration support.  This is a big deal because it means that
	configurations are easier to build and more robust.

	* scripts/configtoh: Stripping the quotes from config options.
	We're using the kernel configurator, so we have less control over
	the user's actions.  This may prove to be overly zealous in