@@ -3,6 +3,46 @@
   NSLU2
 ==========
 
+2005.Apr.14
+
+  o Working with g2 to get the network working.
+
+  He sees:
+apex> dump 0xc8004000
+c8004000: 00 00 00 04 00 00 1f 30  00 00 1e 04 00 00 3f ff  .......0 ......??
+c8004010: 00 00 92 40 00 00 02 49  01 ff 01 ff 00 00 00 00  ...@...I .?.?....
+c8004020: 00 00 00 00 00 00 00 00  00 00 00 00 00 00 00 00  ........ ........
+c8004030: 00 00 00 00 00 00 00 00  00 00 00 00 00 00 00 00  ........ ........
+
+  I see:
+RedBoot>  x -b 0xc8004000 -l 64
+C8004000: 00 00 20 C3 00 00 1F 3C  00 00 FE CF 00 00 31 F3  |.. ....<......1.|
+C8004010: 00 00 92 40 00 00 02 49  01 FF 01 FF 00 00 00 00  |...@...I........|
+C8004020: 00 00 00 00 00 00 00 00  00 00 00 00 00 00 00 00  |................|
+C8004030: 00 00 00 00 00 00 00 00  00 00 00 00 00 00 00 00  |................|
+
+
+  He sees zeroes at 0xc8009000.
+  I see:
+RedBoot> x -b 0xc8009000 -l 256
+C8009000: 00 00 00 3F 00 00 00 0F  00 00 00 00 00 00 00 00  |...?............|
+C8009010: 00 00 00 21 00 00 00 00  00 00 00 00 00 00 00 00  |...!............|
+C8009020: 00 00 00 08 00 00 00 00  00 00 00 00 00 00 00 00  |................|
+C8009030: 00 00 00 12 00 00 00 00  00 00 00 20 00 00 00 00  |........... ....|
+C8009040: 00 00 00 08 00 00 00 00  00 00 00 00 00 00 00 00  |................|
+C8009050: 00 00 00 10 00 00 00 00  00 00 00 00 00 00 00 00  |................|
+C8009060: 00 00 00 08 00 00 00 07  00 00 00 00 00 00 00 00  |................|
+C8009070: 00 00 00 80 00 00 00 00  00 00 00 00 00 00 00 00  |................|
+C8009080: 00 00 00 00 00 00 00 00  00 00 00 31 00 00 00 00  |...........1....|
+C8009090: 00 00 00 C0 00 00 00 01  00 00 00 00 00 00 00 00  |................|
+C80090A0: 00 00 00 00 00 00 00 00  00 00 00 00 00 00 00 00  |................|
+C80090B0: 00 00 00 00 00 00 00 00  00 00 00 00 00 00 00 00  |................|
+C80090C0: 00 00 00 00 00 00 00 00  00 00 00 00 00 00 00 00  |................|
+C80090D0: 00 00 00 00 00 00 00 00  00 00 00 00 00 00 00 00  |................|
+C80090E0: 00 00 00 01 00 00 00 00  00 00 00 00 00 00 00 00  |................|
+C80090F0: 00 00 00 00 00 00 00 0F  00 00 00 66 00 00 00 7D  |...........f...}|
+
+
 2005.Feb.24
 
   o Some improvement to the SDRAM init selection.  I think it might be
